# rts-datetime

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test-reusable.yml  test.yml
rtsdatetime/: __init__.py  default_units.py  model.py  transformer.py  units.py
tests/model/: test_rstcomponent.py  test_rstimedate.py  test_rsttimedelta.py
tests/unit/units/: test_generated_unit.py
